@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Mar  1 10:09:32 2009 -->
+<!--Generated with glade3 3.4.5 on Sun Mar  1 21:59:10 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="tooltip" translatable="yes">Show hidden &amp; backup files</property>
@@ -443,12 +443,7 @@
                           <widget class="GtkHBox" id="hbox2">
                             <property name="visible">True</property>
                             <property name="spacing">5</property>
-                            <child>
-                              <widget class="GtkFileChooserButton" id="fcb_include">
-                                <property name="visible">True</property>
-                                <property name="action">GTK_FILE_CHOOSER_ACTION_SELECT_FOLDER</property>
-                              </widget>
-                            </child>
+                            <property name="homogeneous">True</property>
                             <child>
                               <widget class="GtkButton" id="btn_add_include">
                                 <property name="visible">True</property>
@@ -461,7 +456,6 @@
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
-                                <property name="position">1</property>
                               </packing>
                             </child>
                             <child>
@@ -476,7 +470,7 @@
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
-                                <property name="position">2</property>
+                                <property name="position">1</property>
                               </packing>
                             </child>
                           </widget>
@@ -490,12 +484,7 @@
                           <widget class="GtkHBox" id="hbox3">
                             <property name="visible">True</property>
                             <property name="spacing">5</property>
-                            <child>
-                              <widget class="GtkEntry" id="edit_pattern">
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                              </widget>
-                            </child>
+                            <property name="homogeneous">True</property>
                             <child>
                               <widget class="GtkButton" id="btn_add_exclude">
                                 <property name="visible">True</property>
@@ -508,7 +497,32 @@
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkButton" id="btn_add_exclude_file">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <property name="label" translatable="yes">Add file</property>
+                                <property name="response_id">0</property>
+                                <signal name="clicked" handler="on_btn_add_exclude_file_clicked"/>
+                              </widget>
+                              <packing>
                                 <property name="position">1</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkButton" id="btn_add_exclude_folder">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">True</property>
+                                <property name="label" translatable="yes">Add folder</property>
+                                <property name="response_id">0</property>
+                                <signal name="clicked" handler="on_btn_add_exclude_folder_clicked"/>
+                              </widget>
+                              <packing>
+                                <property name="position">2</property>
                               </packing>
                             </child>
                             <child>
@@ -523,7 +537,7 @@
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
-                                <property name="position">2</property>
+                                <property name="position">3</property>
                               </packing>
                             </child>
                           </widget>
@@ -537,7 +551,7 @@
                         </child>
                         <child>
                           <widget class="GtkScrolledWindow" id="scrolledwindow4">
-                            <property name="width_request">180</property>
+                            <property name="width_request">300</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
@@ -760,8 +774,7 @@
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
                             <property name="label" translatable="yes">- keep all snapshots from today and yesterday
-- keep one snapshot for the last week
-- keep one snapshot for two weeks ago
+- keep one snapshot for the last week and one for two weeks ago
 - keep one snapshot per month for all previous months of this year
 - keep one snapshot per year for all previous years</property>
                           </widget>
@@ -1092,22 +1105,21 @@
       </widget>
     </child>
   </widget>
-  <widget class="GtkDialog" id="SnapshotNameDialog">
+  <widget class="GtkDialog" id="TextInputDialog">
     <property name="border_width">5</property>
-    <property name="title" translatable="yes">Snapshot Name</property>
+    <property name="title" translatable="yes">Pattern</property>
     <property name="modal">True</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
-    <property name="transient_for">MainWindow</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
-      <widget class="GtkVBox" id="dialog-vbox4">
+      <widget class="GtkVBox" id="dialog-vbox6">
         <property name="visible">True</property>
         <property name="spacing">2</property>
         <child>
-          <widget class="GtkEntry" id="edit_snapshot_name">
+          <widget class="GtkEntry" id="edit_text">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="has_focus">True</property>
@@ -1119,23 +1131,23 @@
           </packing>
         </child>
         <child internal-child="action_area">
-          <widget class="GtkHButtonBox" id="dialog-action_area4">
+          <widget class="GtkHButtonBox" id="dialog-action_area6">
             <property name="visible">True</property>
             <property name="layout_style">GTK_BUTTONBOX_END</property>
             <child>
-              <widget class="GtkButton" id="button1">
+              <widget class="GtkButton" id="button3">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="can_default">True</property>
                 <property name="has_default">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-apply</property>
+                <property name="label" translatable="yes">gtk-ok</property>
                 <property name="use_stock">True</property>
                 <property name="response_id">-5</property>
               </widget>
             </child>
             <child>
-              <widget class="GtkButton" id="button2">
+              <widget class="GtkButton" id="button4">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="label" translatable="yes">gtk-cancel</property>
