@@ -1,6 +1,7 @@
 Back In Time
 
 Version 0.9.14
+* GNOME: rework settings dialog
 * GNOME & KDE4: add "smart" remove
 
 Version 0.9.12
